--- a/style-tablet.css
+++ b/style-tablet.css
@@ -10,7 +10,7 @@ body {
     width: 100vw;
     height: 640px;
     background: linear-gradient(290.1deg, #D6E6FE 0%, rgba(214, 252, 254, 0) 100%);
-    /* border-radius: 0px 0px 35px 35px; */
+    border-radius: 0px 0px 35px 35px;
 }
 
 .logo {
@@ -496,6 +496,7 @@ input[type="text"] {
     align-items: center;
     padding: 0;
     gap: 56px;
+    padding-bottom: 200px;
 }
 
 .heading-text-limitations {
